Fixed loading screen vertical alignment

--- a/src/index.css
+++ b/src/index.css
@@ -23,9 +23,12 @@ code {
 
 .loadingAnimation {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  /*justify-content: center;
+  align-items: center;*/
+  position: absolute;
+  top: 35%;
+  left: 35%;
   margin: 0 auto;
-  width: 30vh;
+  width: 30vw;
   height: 30vh;
 }
